# TA

./: BUILD  CMakeCache.txt  CMakeLists.txt  Contoh_Template_Buku_PA_2016.odt  Makefile  README.md  cmake_install.cmake  coba  coba.cpp  kopas.cpp  periksa  periksa.cpp  program
TA_Lite/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  program_lite
